# paste.py

./: .env.example  .gitignore  .pdm-python  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: cd.yml  ci.yml  mypy.yml  sarthi.yml  test-app.yml  updates.yml
alembic/: env.py
alembic/versions/: 9513acd42747_initial_migration.py
data/: MAQR
sdk/: example.py
sdk/sdk/: module.py
src/paste/: __init__.py  config.py  database.py  languages.json  logging.py  main.py  middleware.py  minio.py  models.py  schema.py  utils.py
src/paste/templates/: 404.html  base.html  index.html  paste.html  web.html
tests/: conftest.py  test_api.py
