[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Kanishk Pachauri", email = "itskanishkp.py@gmail.com"},
]
dependencies = [
    "fastapi[all]>=0.104.1",
    "sqlalchemy>=2.0.23",
    "jinja2>=3.1.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm.scripts]
start = "uvicorn src.paste.main:app --host 0.0.0.0 --port 8080 --workers 4"
test = "pytest"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
    "requests>=2.31.0",
]
